--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" href="images/profile_picture.jpg" type="image/jpg">
   </head>
 
   <body>
