--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
-    <link rel="icon" href="" type="">
+    <link rel="icon" href="images/profile_picture.jpg" type="image/jpg">
   </head>
 
   <body>
